Standardizes created questions boxes to correct alignment of words.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,6 +33,10 @@ body > .container {
   margin: 20px 0;
 }
 
+td.create {
+  width: 50%;
+}
+
 #sign-up {
   display: none;
 }
